feat: pdf generator, testing paragraph insertion

--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,24 @@
                 <artifactId>hyph</artifactId>
                 <version>7.0.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>2.0.7</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <mainClass>org.gratidaosempre.Main</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
