--- a/pom.xml
+++ b/pom.xml
@@ -18,64 +18,76 @@
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>kernel</artifactId>
-                <version>7.0.2</version>
+                <version>9.2.0</version>
             </dependency>
 
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>io</artifactId>
-                <version>7.0.2</version>
+                <version>9.2.0</version>
             </dependency>
 
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>layout</artifactId>
-                <version>7.0.2</version>
+                <version>9.2.0</version>
             </dependency>
 
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>forms</artifactId>
-                <version>7.0.2</version>
+                <version>9.2.0</version>
             </dependency>
 
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>pdfa</artifactId>
-                <version>7.0.2</version>
+                <version>9.2.0</version>
             </dependency>
 
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>sign</artifactId>
-                <version>7.0.2</version>
+                <version>9.2.0</version>
             </dependency>
 
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>barcodes</artifactId>
-                <version>7.0.2</version>
+                <version>9.2.0</version>
             </dependency>
 
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>font-asian</artifactId>
-                <version>7.0.2</version>
+                <version>9.2.0</version>
             </dependency>
 
             <dependency>
                 <groupId>com.itextpdf</groupId>
                 <artifactId>hyph</artifactId>
-                <version>7.0.2</version>
+                <version>9.2.0</version>
             </dependency>
+
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
                 <version>2.0.7</version>
                 <scope>test</scope>
             </dependency>
-        </dependencies>
 
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.13.3</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>33.3.1-jre</version> <!-- latest stable as of Aug 2025 -->
+            </dependency>
+        </dependencies>
     <build>
         <plugins>
             <plugin>
